# haskell

Almanac/: Almanac.cabal  cabal.project
Almanac/src/: Main.hs
Astro/: Astro.cabal
Astro/src/: Converter.hs  JDToDate.hs  Main.hs
Astro/src/Astro/Almanac/: Main.hs
Astro/src/Astro/Ephem/: CelestialBody.hs  Coords.hs  Moon.hs  OrbitalElements.hs  Sun.hs  SunMain.hs  Time.hs  Types.hs  Utils.hs
Astro/tests/Astro/: EphemTests.hs
Astro/tests/Astro/Ephem/: CelestialBodyTest.hs  CoordsTest.hs  MoonTest.hs  SunTest.hs  TestUtils.hs  TimeTest.hs  TypesTest.hs  UtilsTest.hs
Ephem/: Ephem.cabal  README.md
Ephem/src/: Converter.hs  Main.hs
Ephem/src/Ephem/: CelestialBody.hs  Coords.hs  Moon.hs  OrbitalElements.hs  Sun.hs  SunMain.hs  Time.hs  Types.hs  Utils.hs
Ephem/tests/: EphemTests.hs
Ephem/tests/Ephem/: CelestialBodyTest.hs  CoordsTest.hs  MoonTest.hs  SunTest.hs  TestUtils.hs  TimeTest.hs  TypesTest.hs  UtilsTest.hs
EphemAPI/: EphemAPI.cabal  Main.hs  README.md  cabal.project
GUI/: GUI.cabal  cabal.project
GUI/src/: Main.hs
GUI/src/GUI/: Plot.hs  Widget.hs
ISDA/: ISDA.cabal
ISDA/src/Envelope/: Main.hs
ISDA/src/EnvelopeMean/: Main.hs
ISDA/src/FFT/: Main.hs
ISDA/src/IMF/: Main.hs
ISDA/src/ISDA/: InOut.hs
ISDA/src/Lsq/: Main.hs
Math/: Math.cabal  cabal.project
Math/src/: Main.hs
Math/src/Math/: CUDALinearEquations.hs  Expression.hs  Function.hs  IODoubleLinearEquations.hs  IODoubleMatrix.hs  IODoubleVector.hs  IOLinearEquations.hs  IOMatrix.hs  IOVector.hs  LinearEquations.hs  Matrix.hs  Statistics.hs  Vector.hs
Math/tests/: MathTests.hs
Math/tests/Math/: ExpressionTest.hs  FunctionTest.hs  IODoubleLinearEquationsTest.hs  IODoubleVectorTest.hs  IOLinearEquationsTest.hs  LinearEquationsTest.hs  StatisticsTest.hs
Regression/: Regression.cabal  cabal.project
Regression/src/: Main.hs
Regression/src/Regression/: AnalyticData.hs  AnalyticDataWrapper.hs  Bayes.hs  Bootstrap.hs  CUDALeastSquares.hs  Data.hs  FFT.hs  Functions.hs  GradientAscent.hs  IMF.hs  IOLeastSquares.hs  LeastSquares.hs  Polynom.hs  RBF.hs  Regression.hs  Spline.hs  Statistic.hs  Utils.hs
Regression/tests/: RegressionTests.hs
Regression/tests/Regression/: AnalyticDataTest.hs  BayesTest.hs  DataTest.hs  LeastSquaresTest.hs  PolynomTest.hs  RBFTest.hs  RegressionTest.hs  UtilsTest.hs
Regression/tests/Regression/data/: dat1.xml  dat2.xml  dat3.xml  modulatedUnitPolynoms11.xml  modulatedUnitPolynoms12.xml  modulatedUnitPolynoms21.xml  modulatedUnitPolynoms22.xml  spline11.xml  spline12.xml  spline21.xml  spline22.xml  spline3.xml
TSA/: TSA.cabal
TSA/res/: tsa  tsa.bat  ui.xml
TSA/src/: Main.hs
TSA/src/TSA/: AnalyticSignal.hs  CommonParams.hs  Correlation.hs  D2.hs  Data.hs  Envelopes.hs  Extrema.hs  HilbertHuang.hs  Interpolate.hs  LeastSquares.hs  Params.hs  Period.hs  RegressionParams.hs  SpecificPoints.hs
TSA/src/TSA/Apps/: Bootstrap.hs  Correlation.hs  D2.hs  HilbertHuang.hs  Minima.hs  Significance.hs
TSA/src/TSA/Bootstrap/: D2.hs  Main.hs  Minima.hs  Period.hs
TSA/src/TSA/GUI/: AnalyticSignal.hs  Attractor.hs  Bayes.hs  Build.hs  Common.hs  Correlation.hs  D2.hs  Data.hs  Dialog.hs  Envelopes.hs  Extrema.hs  FFT.hs  Function.hs  Gnu.hs  Graph.hs  IMF.hs  IO.hs  Interpolate.hs  LeastSquares.hs  LocalPhase.hs  Log.hs  Markers.hs  Modify.hs  Period.hs  Preferences.hs  Sample.hs  Selection.hs  SpecificPoints.hs  State.hs  Statistic.hs  TaskManager.hs  Tasks.hs
Utils/: Utils.cabal
Utils/src/: Main.hs
Utils/src/Utils/: Concurrent.hs  IO.hs  List.hs  Math.hs  Misc.hs  Num.hs  Str.hs  Test.hs  Xml.hs
Utils/tests/: UtilsTests.hs
Utils/tests/Utils/: ConcurrentTest.hs  MiscTest.hs
