name:                Astro
version:             0.0.1
cabal-version:       >= 1.2
build-type:          Simple
license:             AllRightsReserved
extra-source-files:  extra-tmp-files:

library 
  build-depends:    base >= 4
  hs-source-dirs:   src
  ghc-options:      -Wall  -fexcess-precision
  exposed-modules:  
                    Astro.Ephem.CelestialBody,
                    Astro.Ephem.Coords,
                    Astro.Ephem.Moon,
                    Astro.Ephem.OrbitalElements,
                    Astro.Ephem.Sun,
                    Astro.Ephem.Time,
                    Astro.Ephem.Types,
                    Astro.Ephem.Utils

test-suite EphemTests
  type:            exitcode-stdio-1.0
  ghc-options:     -Wall -rtsopts
  build-depends:   base >= 4, HTF > 0.9
  hs-source-dirs:  
                   src,
                   src/Astro,
                   tests
  main-is:         Astro/EphemTests.hs
  other-modules:   
                   Astro.Ephem.CoordsTest,
                   Astro.Ephem.TestUtils,
                   Astro.Ephem.TimeTest,
                   Astro.Ephem.TypesTest,
                   Astro.Ephem.SunTest,
                   Astro.Ephem.MoonTest

executable Astro
  build-depends:   
                   base >= 4,
                   time -any
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts
  main-is:         Main.hs

executable Almanac
  build-depends:   
                   base >= 4,
                   Utils -any,
                   GUI -any,
                   cairo -any,
                   containers -any,
                   gtk3 -any,
                   transformers -any,
                   vector -any
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts
  main-is:         Main.hs

executable Converter
  build-depends:   base >= 4,
                   system-fileio -any,
                   system-filepath -any,
                   bytestring -any,
                   utf8-string -any

  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts
  main-is:         Converter.hs
  extensions:      DoAndIfThenElse

