name:           Ephem
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         nigul

library 
  build-depends:    base >= 4, 
                    time -any
  hs-source-dirs:   src
  ghc-options:      -Wall  -fexcess-precision
  exposed-modules:  
                    Ephem.CelestialBody,
                    Ephem.Coords,
                    Ephem.Moon,
                    Ephem.OrbitalElements,
                    Ephem.Sun,
                    Ephem.Time,
                    Ephem.Types,
                    Ephem.Utils

test-suite EphemTests
  type:            exitcode-stdio-1.0
  ghc-options:     -Wall -rtsopts
  build-depends:   base >= 4, HTF > 0.9
  hs-source-dirs:  
                   src,
                   tests
  main-is:         EphemTests.hs
  other-modules:   
                   Ephem.CoordsTest,
                   Ephem.TestUtils,
                   Ephem.TimeTest,
                   Ephem.TypesTest,
                   Ephem.SunTest,
                   Ephem.MoonTest,
                   Ephem.UtilsTest

executable Converter
  build-depends:   
                   base >= 4,
                   system-fileio -any,
                   system-filepath -any,
                   bytestring -any,
                   utf8-string -any,
                   vector -any
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts
  main-is:         Converter.hs
  extensions:      DoAndIfThenElse

executable Ephem
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall

executable Sun
  build-depends:   base >= 4
  hs-source-dirs:  src
  ghc-options:     -Wall -rtsopts
  main-is:         Ephem/SunMain.hs
