name:                EphemAPI
version:             0.1.0.0
synopsis:            Ephem API for calculating astronomical events (sunrise, sunset, etc.)
license:             BSD3
author:              Author
maintainer:          example@example.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable EphemAPI
  main-is:             Main.hs
  default-extensions: OverloadedStrings
  build-depends:       base >=4.7 && <5,
                       scotty >= 0.12,
                       text >= 1.2,
                       aeson >= 2.0,
                       time >= 1.9,
                       wai >= 3.2,
                       wai-cors >= 0.2,
                       wai-extra >= 3.1,
                       bytestring >= 0.10,
                       Ephem
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
