name:                ISDA
version:             0.0.1
cabal-version:       >= 1.2
build-type:          Simple
license:             AllRightsReserved
license-file:        ""
copyright:           
maintainer:
stability:           
homepage:            
package-url:         
bug-reports:         
synopsis:            
description:         .
category:            
author:              
tested-with:         
data-files:          
data-dir:            ""
extra-source-files:  
extra-tmp-files:     

executable ISDA
  build-depends:   
                   Utils -any,
                   Regression -any,
                   base -any,
                   containers -any
  hs-source-dirs:  src
  ghc-options:     -O2 -fexcess-precision
  main-is:         Main.hs

library 
  build-depends:   
                   Utils -any,
                   base -any,
                   containers -any,
                   vector -any
  hs-source-dirs:  src
  ghc-options:     -O2 -fexcess-precision
  exposed-modules: ISDA.InOut

