name:                ISDA
version:             0.0.1
cabal-version:       >= 1.2
build-type:          Simple
license:             AllRightsReserved
extra-source-files:  
extra-tmp-files:
executable ISDA
  build-depends:   
                   Utils -any,
                   base -any,
                   containers -any
  hs-source-dirs:  src
  ghc-options:     -fexcess-precision
  main-is:         Main.hs

library 
  build-depends:   
                   Utils -any,
                   base -any,
                   containers -any,
                   vector -any
  hs-source-dirs:  src
  ghc-options:     -fexcess-precision
  exposed-modules: ISDA.InOut

