name:           Math
version:        0.0.1
cabal-version:  >=1.2
build-type:     Simple
license:        AllRightsReserved
license-file:   ""
copyright:      stability:      category:       
executable Math
  build-depends:   
               Utils -any,
               base -any,
               HUnit -any,
               HaXml -any,
               array -any,
               base -any,
               containers -any,
               pretty -any,
               random -any,
               time -any,
               containers -any,
               pretty -any,
               random -any
  hs-source-dirs:  src
  ghc-options:     -O2 -fexcess-precision -rtsopts
  main-is:         Main.hs
  other-modules:   
                   Math.Expression,
                   Math.Function,
                   Math.IOLinearEquations,
                   Math.IOMatrix,
                   Math.IOVector,
                   Math.IODoubleVector,
                   Math.LinearEquations,
                   Math.Matrix,
                   Math.Vector
  extensions:      
               ExistentialQuantification,
               FlexibleInstances,
               ScopedTypeVariables,
               TypeSynonymInstances,
               MultiParamTypeClasses

library 
  build-depends:    
               Utils -any,
               base -any,
               HUnit -any,
               HaXml -any,
               array -any,
               base -any,
               containers -any,
               pretty -any,
               random -any,
               time -any,
               containers -any,
               pretty -any,
               random -any,
               statistics -any,
               vector -any,
               math-functions -any,
               accelerate -any
  hs-source-dirs:   src
  ghc-options:      -O2 -fexcess-precision
  exposed-modules:  
                   Math.CUDALinearEquations,
                   Math.Expression,
                   Math.Function,
                   Math.IOLinearEquations,
                   Math.IODoubleLinearEquations,
                   Math.IOMatrix,
                   Math.IOVector,
                   Math.IODoubleMatrix,
                   Math.IODoubleVector,
                   Math.LinearEquations,
                   Math.Matrix,
                   Math.Vector
  extensions:       
                   FlexibleInstances,
                   MultiParamTypeClasses

test-suite MathTests
  type:            exitcode-stdio-1.0
  main-is:         MathTests.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   base >= 4, HTF > 0.9
  hs-source-dirs:  
                   src, 
                   src/Math, 
                   tests
  other-modules:   
                   CUDALinearEquations,
                   Math.ExpressionTest,
                   Math.FunctionTest,
                   IODoubleVector,
                   IODoubleMatrix
  extensions:      
                   FlexibleInstances, 
                   ScopedTypeVariables

