name:           Math
version:        0.0.1
cabal-version:  >= 1.10
build-type:     Simple
license:        AllRightsReserved

executable Math
  build-depends:
               Utils -any,
               base >= 4,
               HUnit -any,
               HaXml -any,
               array -any,
               containers -any,
               pretty -any,
               random -any,
               time -any,
               statistics -any,
               vector -any,
               math-functions -any,
               Math
  hs-source-dirs:  src
  ghc-options:     -O2 -fexcess-precision -threaded -fprof-auto "-with-rtsopts=-N -p -s -h -i0.001"
  main-is:         Main.hs
  other-modules:
                   Math.Expression,
                   Math.Function,
                   Math.IOLinearEquations,
                   Math.IOMatrix,
                   Math.IOVector,
                   Math.IODoubleVector,
                   Math.LinearEquations,
                   Math.Matrix,
                   Math.Vector
  default-language: Haskell2010
  default-extensions:
               ExistentialQuantification,
               FlexibleInstances,
               ScopedTypeVariables,
               TypeSynonymInstances,
               MultiParamTypeClasses,
               FlexibleContexts

library
  build-depends:
               Utils -any,
               base >= 4,
               HUnit -any,
               HaXml -any,
               array -any,
               containers -any,
               pretty -any,
               random -any,
               time -any,
               statistics -any,
               vector -any,
               math-functions -any
  hs-source-dirs:   src
  ghc-options:      -O2 -fexcess-precision
  exposed-modules:
                   Math.Expression,
                   Math.Function,
                   Math.IOLinearEquations,
                   Math.IODoubleLinearEquations,
                   Math.IOMatrix,
                   Math.IOVector,
                   Math.IODoubleMatrix,
                   Math.IODoubleVector,
                   Math.LinearEquations,
                   Math.Matrix,
                   Math.Vector
  default-language: Haskell2010
  default-extensions:
                   FlexibleInstances,
                   MultiParamTypeClasses,
                   FlexibleContexts

test-suite MathTests
  type:            exitcode-stdio-1.0
  main-is:         MathTests.hs
  ghc-options:     -Wall -rtsopts
  build-depends:
                   base >= 4,
                   tasty -any,
                   tasty-hunit -any,
                   random -any,
                   array -any,
                   Utils -any,
                   Math
  hs-source-dirs:  tests
  other-modules:
                   Math.ExpressionTest,
                   Math.FunctionTest,
                   Math.LinearEquationsTest,
                   Math.IOLinearEquationsTest,
                   Math.IODoubleLinearEquationsTest,
                   Math.IODoubleVectorTest
  default-language: Haskell2010
  default-extensions:
                   FlexibleInstances,
                   ScopedTypeVariables,
                   FlexibleContexts
