name:                Regression
version:             0.0.1
cabal-version:       >= 1.10
build-type:          Simple
license:             AllRightsReserved
data-dir:            ""

library
  default-language: Haskell2010
  build-depends:
                   Math -any,
                   Utils -any,
                   base -any,
                   random -any,
                   containers -any,
                   SafeSemaphore -any,
                   mwc-random -any,
                   vector -any,
                   fft >= 0.1.8,
                   carray -any,
                   statistics -any,
                   cubicspline -any,
                   numeric-limits -any,
                   hmatrix -any
  hs-source-dirs:   src
  ghc-options:      -O2 -fexcess-precision
  exposed-modules:
                   Regression.AnalyticData,
                   Regression.AnalyticDataWrapper,
                   Regression.Bayes,
                   Regression.Bootstrap,
                   Regression.Data,
                   Regression.FFT,
                   Regression.Functions,
                   Regression.IOLeastSquares,
                   Regression.LeastSquares,
                   Regression.Polynom,
                   Regression.RBF,
                   Regression.Regression,
                   Regression.Spline,
                   Regression.Statistic,
                   Regression.Utils
  default-extensions:
                    ExistentialQuantification,
                    FlexibleInstances,
                    ScopedTypeVariables,
                    TypeSynonymInstances

executable Regression
  default-language: Haskell2010
  build-depends:
                   Regression,
                   Math -any,
                   Utils -any,
                   base -any,
                   random -any,
                   filepath -any,
                   vector -any,
                   containers -any,
                   statistics -any,
                   hmatrix -any,
                   mwc-random -any,
                   cubicspline -any
  hs-source-dirs:  src
  ghc-options:     -O2 -fexcess-precision -threaded -fprof-auto "-with-rtsopts=-N -p -s -h -i0.1"
  main-is:         Main.hs
  default-extensions:
                   ExistentialQuantification,
                   FlexibleInstances,
                   ScopedTypeVariables,
                   TypeSynonymInstances

test-suite RegressionTests
  type:            exitcode-stdio-1.0
  main-is:         RegressionTests.hs
  ghc-options:     -Wall -rtsopts -threaded
  build-depends:
                   base >= 4,
                   Regression,
                   Math,
                   Utils,
                   tasty,
                   tasty-hunit,
                   filepath,
                   vector,
                   random,
                   hmatrix,
                   containers
  hs-source-dirs:
                   tests
  other-modules:
                   Regression.RegressionTest,
                   Regression.PolynomTest,
                   Regression.AnalyticDataTest,
                   Regression.LeastSquaresTest,
                   Regression.DataTest,
                   Regression.BayesTest,
                   Regression.RBFTest
  default-language: Haskell2010
  default-extensions:
                   FlexibleInstances,
                   ScopedTypeVariables,
                   TypeSynonymInstances,
                   ExistentialQuantification

executable GradientAscent
  default-language: Haskell2010
  build-depends:   base >= 4,
                   system-fileio -any,
                   system-filepath -any,
                   bytestring -any,
                   utf8-string -any
  hs-source-dirs:  src
  ghc-options:     -O2 -fexcess-precision -rtsopts -threaded
  main-is:         Regression/GradientAscent.hs
  default-extensions:
                   DoAndIfThenElse,
                   ScopedTypeVariables

