name:                TSA
version:             0.0.1
cabal-version:       >= 1.2
build-type:          Simple
license:             AllRightsReserved
extra-source-files:  
extra-tmp-files:
executable TSA
  build-depends:   
               GUI -any,
               Math -any,
               Regression -any,
               Utils -any,
               array -any,
               base -any,
               cairo -any,
               containers -any,
               directory -any,
               gnuplot -any,
               random -any,
               gtk3 -any,
               transformers -any,
               ISDA -any,
               SafeSemaphore -any,
               statistics -any,
               vector -any,
               Ephem -any,
               statistics-linreg -any,
               mwc-random -any,
               zlib -any,
               bytestring -any,
               utf8-string -any,
               utility-ht -any,
               filepath -any,
               time -any
               
  hs-source-dirs:  src
  ghc-options:     -O2 -fexcess-precision -rtsopts -threaded
  main-is:         Main.hs
  extensions:      
               DoAndIfThenElse,
               ScopedTypeVariables
  other-modules:

executable Bootstrap
  build-depends:   
                base >= 4,
                filelock -any,
                system-fileio -any,
                system-filepath -any
  hs-source-dirs:  src
  ghc-options:     -O2 -fexcess-precision -rtsopts -threaded
  main-is:         TSA/Apps/Bootstrap.hs
  extensions:      
                DoAndIfThenElse,
                ScopedTypeVariables
  other-modules: 

executable Significance
  build-depends:   base >= 4
  hs-source-dirs:  src
  ghc-options:     -O2 -fexcess-precision -rtsopts -threaded
  main-is:         TSA/Apps/Significance.hs
  extensions:      ScopedTypeVariables
  other-modules:   

executable D2
  build-depends:   base >= 4
  hs-source-dirs:  src
  ghc-options:     -O2 -fexcess-precision -rtsopts -threaded
  main-is:         TSA/Apps/D2.hs
  extensions:      ScopedTypeVariables
  other-modules:   

executable HilbertHuang
  build-depends:   base >= 4,
                   mtl -any,
                   monad-parallel -any
  hs-source-dirs:  src
  ghc-options:     -O2 -fexcess-precision -rtsopts -threaded
  main-is:         TSA/Apps/HilbertHuang.hs
  extensions:      ScopedTypeVariables
  other-modules:   

executable Correlation
  build-depends:   base >= 4,
                   mtl -any,
                   monad-parallel -any
  hs-source-dirs:  src
  ghc-options:     -O2 -fexcess-precision -rtsopts -threaded
  main-is:         TSA/Apps/Correlation.hs
  extensions:      ScopedTypeVariables
  other-modules:   
