name:                Utils
version:             0.0.1
cabal-version:       >= 1.10
build-type:          Simple
license:             AllRightsReserved

executable Utils
  build-depends:
                   base >= 4,
                   HaXml -any,
                   array -any,
                   filepath -any,
                   pretty -any,
                   random -any,
                   time -any,
                   bytestring -any,
                   utf8-string -any,
                   math-functions -any,
                   vector -any
  hs-source-dirs:  src
  ghc-options:     -O2 -fexcess-precision
  main-is:         Main.hs
  other-modules:
                   Utils.IO,
                   Utils.List,
                   Utils.Math,
                   Utils.Misc,
                   Utils.Num,
                   Utils.Str,
                   Utils.Xml
  default-language: Haskell2010
  default-extensions: ScopedTypeVariables

library
  build-depends:
                   base >= 4,
                   HaXml -any,
                   array -any,
                   filepath -any,
                   pretty -any,
                   random -any,
                   time -any,
                   vector -any,
                   SafeSemaphore -any,
                   tasty -any,
                   tasty-hunit -any,
                   bytestring -any,
                   utf8-string -any,
                   math-functions -any
  hs-source-dirs:   src
  ghc-options:      -O2 -fexcess-precision
  exposed-modules:
                   Utils.Concurrent,
                   Utils.IO,
                   Utils.List,
                   Utils.Math,
                   Utils.Misc,
                   Utils.Num,
                   Utils.Str,
                   Utils.Test,
                   Utils.Xml
  default-language: Haskell2010
  default-extensions: ScopedTypeVariables

test-suite UtilsTests
  type:            exitcode-stdio-1.0
  main-is:         UtilsTests.hs
  ghc-options:     -Wall -rtsopts
  build-depends:
                   base >= 4,
                   tasty -any,
                   tasty-hunit -any,
                   vector -any,
                   SafeSemaphore -any,
                   Utils
  hs-source-dirs:  tests
  other-modules:
                   Utils.MiscTest,
                   Utils.ConcurrentTest
  default-language: Haskell2010
  default-extensions: ScopedTypeVariables
